--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,8 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "php": ">=5.4.0",
+        "composer/installers": "~1.0"
+    }
 }
