--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "GPL",
   "private": true,
   "devDependencies": {
-    "grunt": "^1.0.1",
+    "grunt": "^1.0.4",
     "grunt-contrib-clean": "~1.0.0",
     "grunt-contrib-compress": "~1.3.0",
     "grunt-contrib-concat": "^1.0.1",
@@ -16,9 +16,12 @@
     "grunt-contrib-less": "^1.4.0",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-notify": "^0.4.5",
     "grunt-phplint": "0.0.8",
     "grunt-wp-i18n": "^0.5.4",
-    "grunt-notify": "^0.4.5",
     "jshint-stylish": "^2.2.1"
+  },
+  "dependencies": {
+    "cli": "^1.0.1"
   }
 }
