--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,15 @@
     "require": {
         "php": ">=5.4.0",
         "composer/installers": "~1.0"
-    }
+    },
+
+    "require-dev": {
+        "automattic/vipwpcs": "dev-master",
+        "dealerdirect/phpcodesniffer-composer-installer": "dev-master"
+    },
+   "scripts": {
+        "phpcs": [
+          "phpcs -p -s"
+        ]
+   }
 }
