--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "Woocommerce-Conversion-Tracking",
-  "version": "2.0.8",
+  "version": "2.0.9",
   "description": "Conversion tracking plugin for WooCommerce",
   "author": "Tareq Hasan",
   "license": "GPL",
   "private": true,
   "devDependencies": {
-    "grunt": "^1.0.4",
+    "grunt": "^1.4.1",
     "grunt-contrib-clean": "~1.0.0",
     "grunt-contrib-compress": "~1.3.0",
     "grunt-contrib-concat": "^1.0.1",
@@ -15,9 +15,9 @@
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-less": "^1.4.0",
     "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-notify": "^0.4.5",
-    "grunt-phplint": "0.0.8",
+    "grunt-phplint": "^0.1.0",
     "grunt-wp-i18n": "^0.5.4",
     "jshint-stylish": "^2.2.1"
   },
