--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.4.0",
-        "composer/installers": "~1.0"
+        "php": ">=7.0",
+        "composer/installers": "^1.9"
     },
 
     "require-dev": {
         "automattic/vipwpcs": "dev-master",
-        "dealerdirect/phpcodesniffer-composer-installer": "dev-master"
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7"
     },
    "scripts": {
         "phpcs": [
