--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,23 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=7.0",
-        "composer/installers": "^1.9"
+        "composer/installers": "^1.9",
+        "appsero/client": "dev-develop"
     },
 
     "require-dev": {
-        "automattic/vipwpcs": "dev-master",
+        "automattic/vipwpcs": "^2.3",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7"
     },
    "scripts": {
         "phpcs": [
           "phpcs -p -s"
         ]
-   }
+   },
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
+    }
 }
